--- a/app/src/main/res/values-jp/strings.xml
+++ b/app/src/main/res/values-jp/strings.xml
@@ -2,5 +2,6 @@
 
 <resources>
     <string name="get_debate_fail">討論の取得に失敗しました。</string>
+    <string name="message_creation_fail">メッセージの送信に失敗しました。</string>
     <string name="like_fail">いいねに失敗しました。しばらく時間を置いて、再度お試しください。</string>
 </resources>
