--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="notification_settings_debate_start">討論開始</string>
     <string name="notification_settings_debate_message">討論メッセージ</string>
     <string name="notification_settings_debate_comment">討論へのコメント</string>
+    <string name="please_check_internet">インターネットの接続を確認してください</string>
+
 
     <string name="app_name" translatable="false">Vental</string>
     <string name="like_fail">いいねに失敗しました。しばらく時間を置いて、再度お試しください。</string>
