--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="notification_settings_debate_message">討論メッセージ</string>
     <string name="notification_settings_debate_comment">討論へのコメント</string>
     <string name="please_check_internet">インターネットの接続を確認してください</string>
+    <string name="follow_fail">フォロー、解除に失敗しました。時間をおいて再度お試しください。</string>
 
 
     <string name="app_name" translatable="false">Vental</string>
