--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,30 @@
     <!--    エラー関連-->
     <string name="fail_loading_try_again">読み込みに失敗しました。通信環境の良いところで再度お試しください。</string>
 
+<!--    退会関連-->
+    <string name="close_account">退会する</string>
+    <string name="close_account_comfirmation">アカウントを削除しますか？</string>
+    <string name="close_account_success">アカウント削除が完了しました。</string>
+    <string name="close_account_failure">アカウント削除に失敗しました。時間をあけて再度お試しください。</string>
+    <string name="close_account_warning">注意事項</string>
+    <string name="choose_close_account_reason">退会理由を選択してください。</string>
+    <string name="close_account_reason_title_0">雰囲気が悪すぎた</string>
+    <string name="close_account_reason_description_0">利用してみたものの、攻撃的なコメントが多く、精神的に疲れてしまった。ストレス発散のつもりが逆にストレスを感じるようになったため、退会することにした。</string>
+    <string name="close_account_reason_title_1">予想以上に攻撃された</string>
+    <string name="close_account_reason_description_1">最初は面白がって参加していたが、ある日自分がターゲットになり、思った以上に攻撃を受けた。耐えられなくなり、このSNSを続けるのは無理だと判断した。</string>
+    <string name="close_account_reason_title_2">私生活に影響が出た</string>
+    <string name="close_account_reason_description_2">SNS上の発言がリアルな生活にも影響し、対人関係がギクシャクしてしまった。また、攻撃的な発言を繰り返すうちに、自分の性格まで変わってしまった気がして、距離を置くことにした。</string>
+    <string name="close_account_reason_title_3">飽きた／疲れた</string>
+    <string name="close_account_reason_description_3">最初は楽しんでいたが、同じような内容の投稿が多く、だんだん飽きてしまった。また、ネガティブな内容ばかりで疲れてしまい、もっとポジティブなSNSに移行することにした。</string>
+    <string name="close_account_reason_title_4">時間を無駄にしたくない</string>
+    <string name="close_account_reason_description_4">悪口の応酬に時間を費やしているうちに、「こんなことをしていても何の得にもならない」と気づいた。もっと生産的なことに時間を使うために退会することにした。</string>
+    <string name="close_account_reason_title_5">炎上して面倒になった</string>
+    <string name="close_account_reason_description_5">軽い気持ちで投稿した内容が思わぬ形で炎上し、対応が面倒になった。個人的に粘着してくるユーザーも出てきたため、関わるのをやめることにした。</string>
+    <string name="close_account_reason_title_6">身バレのリスクを感じた</string>
+    <string name="close_account_reason_description_6">気軽に発言していたが、投稿内容から個人が特定される可能性があると気づいた。トラブルを避けるために早めに退会することにした</string>
+    <string name="close_account_takes_30days">30日以内にログインしていただくと、アカウントはそのままでログインいただけます。30日を過ぎると自動でアカウント情報は削除されるため、現在のアカウントはご使用になれません。</string>
+    <string name="close_account_agreement">他のアプリでなるべく人の悪口を言わないことを同意する。</string>
+    <string name="close_account_agreement_required">上記事項に同意してください。</string>
 
 
     <string name="app_name" translatable="false">Vental</string>
