軽微な修正

--- a/app/src/main/res/values-jp/strings.xml
+++ b/app/src/main/res/values-jp/strings.xml
@@ -104,5 +104,10 @@
 <!--    コメント関連-->
     <string name="send_comment_failure">コメントの送信に失敗しました。時間をあけて再度お試しください。</string>
 
+<!--    アカウント画面関連-->
+    <string name="follower">フォロワー</string>
+    <string name="debate">討論</string>
+
+
     <string name="like_fail">いいねに失敗しました。しばらく時間を置いて、再度お試しください。</string>
 </resources>
