--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,10 @@
     <!--    コメント関連-->
     <string name="send_comment_failure">コメントの送信に失敗しました。時間をあけて再度お試しください。</string>
 
+    <!--    アカウント画面関連-->
+    <string name="follower">フォロワー</string>
+    <string name="debate">討論</string>
+
     <string name="app_name" translatable="false">Vental</string>
     <string name="like_fail">いいねに失敗しました。しばらく時間を置いて、再度お試しください。</string>
     <string name="default_web_client_id">480895274589-sca3ln83hfnh4odgegup9s7c7llms32o.apps.googleusercontent.com</string>
