--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,8 +59,13 @@
 
     <!--    討論関連全般-->
     <string name="get_extra_debate_failure">討論の追加の取得に失敗しまいた。</string>
+    <string name="comment">コメント</string>
+    <string name="add_comment">コメントを追加</string>
+    <string name="unit_of_comment">件</string>
+    <string name="add_message">反論する</string>
 
-<!--    ventcard作成関連-->
+
+    <!--    ventcard作成関連-->
     <string name="select_file">ファイルを選択</string>
     <string name="add_tag">タグを追加</string>
     <string name="tag_amount_limit">タグは5つまでしか追加できません。</string>
