--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,7 +114,18 @@
     <string name="close_account_takes_30days">30日以内にログインしていただくと、アカウントはそのままでログインいただけます。30日を過ぎると自動でアカウント情報は削除されるため、現在のアカウントはご使用になれません。</string>
     <string name="close_account_agreement">他のアプリでなるべく人の悪口を言わないことを同意する。</string>
     <string name="close_account_agreement_required">上記事項に同意してください。</string>
+    <string name="space"> </string>
 
+    <!--    サインイン関連-->
+    <string name="welcome_to_vental">VENTALへようこそ</string>
+    <string name="vental_subheading">傷つく人を減らすためのプラットフォーム</string>
+    <string name="sign_in_with_google">Googleでサインイン</string>
+    <string name="I">私は</string>
+    <string name="and">及び</string>
+    <string name="agree_to">に同意します</string>
+    <string name="check_to_agree_terms">私は利用規約およびプライバシーポリシーに同意します</string>
+    <string name="agree_to_terms">サインインすることで、あなたは当社の利用規約とプライバシーポリシーに同意したことになります。</string>
+    
     <!--    コメント関連-->
     <string name="send_comment_failure">コメントの送信に失敗しました。時間をあけて再度お試しください。</string>
     <string name="no_comment_available">コメントはまだありません。</string>
@@ -129,9 +140,74 @@
     
 <!--    アプリ情報関連-->
     <string name="terms_of_service">利用規約</string>
-    <string name="terms_of_service_content">これは利用規約です。あと数日で考えなければなりませんね。なんとまあ</string>
+    <string name="terms_of_service_content">
+                本利用規約（以下「本規約」）は、当アプリ（以下「当アプリ」）の利用条件を定めるものです。ユーザーは、本規約に同意した上で当アプリを利用するものとします。
+
+        1. 適用範囲
+        本規約は、当アプリの全ユーザーに適用されます。ユーザーは、本規約に同意しない場合、当アプリを利用できません。
+
+        2. アカウント登録
+        ユーザーは、正確かつ最新の情報を提供し、虚偽の情報を登録しないものとします。
+        アカウントの管理はユーザーの責任で行い、第三者に譲渡・貸与・共有することを禁止します。
+        ユーザーが未成年の場合、親権者の同意を得た上で利用してください。
+        3. 禁止行為
+        ユーザーは、以下の行為を行ってはなりません。違反した場合、アカウントの停止・削除を含む対応を行うことがあります。
+
+        法令・公序良俗に反する行為
+        他者への誹謗中傷・嫌がらせ・差別行為
+        スパム行為・迷惑行為
+        当アプリの運営を妨害する行為
+        虚偽情報の登録・なりすまし行為
+        その他、当アプリが不適切と判断する行為
+        4. 免責事項
+        当アプリは、ユーザー間のトラブルに関与せず、一切の責任を負いません。
+        システムの不具合や通信障害によるデータ損失について、当アプリは責任を負いません。
+        当アプリの利用によって発生した損害について、当アプリは一切の責任を負いません。
+        5. サービスの変更・停止
+        当アプリは、予告なくサービスの変更・停止・終了を行うことがあります。
+        重大な変更がある場合、アプリ内で通知を行います。
+        6. 利用規約の変更
+        本規約は、必要に応じて変更することがあります。変更後の利用規約は、アプリ内での告知後に適用されます。
+
+        7. お問い合わせ
+        本規約に関するお問い合わせは、以下のメールアドレスまでご連絡ください。
+        📩 [support@example.com]
+    </string>
     <string name="guideline">ガイドライン</string>
     <string name="guideline_content">これはガイドラインです。あと数日で考えなければなりませんね。なんとまあ</string>
-    <string name="privacy_policy">個人情報保護方針</string>
-    <string name="privacy_policy_content">これは個人情報保護方針です。あと数日で考えなければなりませんね。なんとまあ</string>
+    <string name="privacy_policy">プライバシーポリシー</string>
+    <string name="privacy_policy_content">
+        本プライバシーポリシー（以下「本ポリシー」）は、本アプリ（以下「当アプリ」）におけるユーザーの個人情報の取り扱いについて定めるものです。
+
+        1. 取得する情報
+        当アプリでは、以下の情報を取得する場合があります。
+
+        ユーザーが提供する情報: アカウント情報（メールアドレス、プロフィール画像、位置情報等）
+        自動取得する情報: 利用履歴、デバイス情報、IPアドレス
+        2. 利用目的
+        取得した情報は、以下の目的で利用します。
+
+        アカウント管理およびサービス提供
+        利便性向上のためのデータ分析
+        違反行為の防止・対応
+        法令遵守
+        3. 情報の共有・提供
+        当アプリでは、以下の場合を除き、第三者に個人情報を提供することはありません。
+
+        ユーザーの同意がある場合
+        法令に基づく場合
+        業務委託のために必要な場合（例：クラウドサービス提供者へのデータ保存）
+        4. データの保存期間
+        ユーザーがアカウントを削除した場合、関連するデータは一定期間後に削除されます。ただし、法令遵守のために必要な情報は保持する場合があります。
+
+        5. 利用者の権利
+        ユーザーは、当アプリに保存された自身の個人情報について、確認・訂正・削除を求めることができます。対応を希望する場合は、下記の連絡先までお問い合わせください。
+
+        6. お問い合わせ
+        プライバシーポリシーに関するご質問は、以下のメールアドレスまでお問い合わせください。
+        📩 [support@example.com]
+
+        7. 変更について
+        本ポリシーは、必要に応じて変更することがあります。重要な変更がある場合は、アプリ内で通知します。
+    </string>
 </resources>
