リファクタリング。
デザイン面、少しのエラー

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,13 @@
     <string name="to_do_report_debate">討論を通報</string>
     <string name="to_do_report_ventCard">カードを通報</string>
 
+<!--    マイページ関連-->
+    <string name="no_mydebate_available">参加している討論は現在ありません。とても綺麗な心です。<br />討論に参加するとここに表示されますが、無理しないでください。</string>
+    <string name="no_mycard_available">作成したベントカードはありません。つらいことは吐き出しても大丈夫です。ただ、あなたとは違う考えの人も必ずいることでしょう。</string>
+    <string name="if_want_make_card">もし言いたい悪口、愚痴をこぼしたいこと、イライラすることがあったら下のバーから投稿してみよう</string>
+    <string name="no_likeddebate_available">いいねした討論はありません。いいねしている時間があったら楽しいことしてください。</string>
+
+
     <!--    討論関連全般-->
     <string name="get_extra_debate_failure">討論の追加の取得に失敗しまいた。</string>
     <string name="comment">コメント</string>
@@ -82,13 +89,15 @@
 
     <!--    フォロー関連-->
     <string name="follow_failure">フォロー/フォロー解除に失敗しました。時間をあけて再度お試しください。</string>
-    <string name="please_follow_to_show_debates">表示する討論がありません。フォローしてください。</string>
     <string name="all">全て</string>
     <string name="follow">フォローする</string>
     <string name="unfollow">フォロー解除</string>
+    <string name="please_follow">フォローした人が参加している討論がここで見れます。まずはフォローしましょう。</string>
+
 
     <!--    エラー関連-->
     <string name="fail_loading_try_again">読み込みに失敗しました。通信環境の良いところで再度お試しください。</string>
+    <string name="error_occurred_try_again">エラーが発生しました。時間をおいて再度お試しください。</string>
 
 <!--    退会関連-->
     <string name="close_account">退会する</string>
@@ -141,40 +150,75 @@
 <!--    アプリ情報関連-->
     <string name="terms_of_service">利用規約</string>
     <string name="terms_of_service_content">
-                本利用規約（以下「本規約」）は、当アプリ（以下「当アプリ」）の利用条件を定めるものです。ユーザーは、本規約に同意した上で当アプリを利用するものとします。
+        この利用規約（以下、「本規約」といいます。）は、本アプリ（以下、「本サービス」といいます。）の利用に関する条件を定めるものです。ユーザーは、本規約に同意した上で本サービスを利用するものとします。
 
-        1. 適用範囲
-        本規約は、当アプリの全ユーザーに適用されます。ユーザーは、本規約に同意しない場合、当アプリを利用できません。
+        第1条（適用）
+        本規約は、ユーザーと本サービスの運営者（以下、「運営者」といいます。）との間の本サービスの利用に関わる一切の関係に適用されます。運営者は、本規約の内容を変更することができます。変更後の規約は、本サービスを利用する上での公開時点から効力を生じるものとします。
 
-        2. アカウント登録
-        ユーザーは、正確かつ最新の情報を提供し、虚偽の情報を登録しないものとします。
-        アカウントの管理はユーザーの責任で行い、第三者に譲渡・貸与・共有することを禁止します。
-        ユーザーが未成年の場合、親権者の同意を得た上で利用してください。
-        3. 禁止行為
-        ユーザーは、以下の行為を行ってはなりません。違反した場合、アカウントの停止・削除を含む対応を行うことがあります。
+        第2条（利用登録）
+        ユーザーは、本規約に同意した上で、会員登録を行うことで本サービスを利用することができます。本サービスは、Firebase認証を使用したアカウント登録を行う必要があります。
+        利用登録にあたり、虚偽の情報を提供することは禁止します。
 
-        法令・公序良俗に反する行為
-        他者への誹謗中傷・嫌がらせ・差別行為
-        スパム行為・迷惑行為
-        当アプリの運営を妨害する行為
-        虚偽情報の登録・なりすまし行為
-        その他、当アプリが不適切と判断する行為
-        4. 免責事項
-        当アプリは、ユーザー間のトラブルに関与せず、一切の責任を負いません。
-        システムの不具合や通信障害によるデータ損失について、当アプリは責任を負いません。
-        当アプリの利用によって発生した損害について、当アプリは一切の責任を負いません。
-        5. サービスの変更・停止
-        当アプリは、予告なくサービスの変更・停止・終了を行うことがあります。
-        重大な変更がある場合、アプリ内で通知を行います。
-        6. 利用規約の変更
-        本規約は、必要に応じて変更することがあります。変更後の利用規約は、アプリ内での告知後に適用されます。
+        第3条（禁止事項）
+        ユーザーは、本サービスの利用に際して、以下の行為をしてはなりません。
+        * 法令または律や公序良俗に違反する行為
+        * 他者になりすます行為
+        * スパム行為や広告目的の利用、誹謗中傷、名誉毀損、嫌がらせ、脅迫行為
+        * 差別的な発言、ヘイトスピーチ
+        * 個人情報の不正取得や第三者への公開
+        * 著作権、商標権などその他の知的財産権を侵害する行為
+        * 本サービスの運営を妨害する行為
+        * その他、運営者が不適切と判断する行為
 
-        7. お問い合わせ
-        本規約に関するお問い合わせは、以下のメールアドレスまでご連絡ください。
-        📩 [support@example.com]
+        第4条（投稿と反論）
+        ユーザーは、本サービス上で自由に投稿および反論を行うことができます。反論がついた投稿は、タイムラインに表示され、全ユーザーが閲覧可能となります。反論のない投稿も閲覧可能な状態で保持され、上に表示されます。反論がつかない投稿は公開されません。
+        運営は、違法または不適切と判断した投稿を削除する権利を有します。
+
+        第5条（いいねと評価）
+        いいねの数によって、投稿または反論の支持度が可視化されます。いいねの数が多い投稿や反論がより支持されているものと判断されます。
+
+        第6条（アカウントの停止・削除）
+        運営は、以下の場合にユーザーのアカウントを停止または削除することができます。
+        * 本規約に違反した場合
+        * 不適切な投稿を繰り返した場合
+        * その他、運営がアカウント停止・削除が必要と判断した場合
+
+        第7条（免責事項）
+        1. 当社は、アプリ及びアプリを通じて提供されるサービスについて、正確性、完全性、有効性、信頼性、安全性、適法性、特定の目的への適合性を含む、事実上又は法律上の一切の不具合がないことにつき、明示的にも黙示的にも保証は行いません。なお、セキュリティ等への欠陥・エラー・バグがないことについても保証しません。
+        2. 当社は、アプリについて次の事項について保証を行いません：
+            * すべての情報端末に対応して正常に動作すること
+            * OS又はバージョンアップ等が行われた場合において正常に動作すること
+            * アプリストア等を含むプラットフォーマーの運用方針、規約等の変更が行われた場合において正常に動作すること
+        3. 当社はユーザーに対し、前2項にかかる一切の不具合について、当社の責任と負担で当該不具合の解消を行うことを保証しません。
+        4. 当アプリは、ユーザー間のトラブルに関与せず、一切の責任を負いません。
+        5. システムの不具合や通信障害によるデータ損失について、当アプリは責任を負いません。
+        6. 当アプリの利用によって発生した損害について、当アプリは一切の責任を負いません。
+
+        第8条（利用資格）
+        1. 13歳未満はアプリを利用することができません。
+        2. 日本国外にてアプリを利用することはできません。
+        3. ユーザーは、アプリを利用するに際し、情報端末（デバイス）、通信機器・手段、電力等をユーザー自らの責任と負担で準備・用意し、アプリ利用中は維持しなければならないものとします。
+        4. ユーザーは、当社が定める仕様基準（対応するOS、性能、機能等を含みますが、これらに限られません）に従わない限り、アプリを利用できない場合があることを予め了承します。
+        5. ユーザーが未成年の場合、親権者の同意を得た上で利用してください。
+
+        第9条（投稿内容の監視および削除義務の免除）
+        1. 当社は、本サービス上での投稿内容について、24時間365日の監視を行う義務を負いません。
+        2. 当社は、ユーザーが投稿した内容について、事前にその適法性、妥当性等を確認する義務を負いません。ユーザーは、自己の責任において本サービスを利用し、投稿するものとします。
+        3. 当社は、当該投稿が違法である、もしくは本規約に違反していると認識した場合、または当社の判断で不適切な内容であると認めた場合においても、直ちに投稿を削除する義務を負うものではありません。ただし、当社は、適切な判断の下、必要に応じて投稿を削除する権利を有します。
+        4. ユーザーは、当社が投稿内容に対して削除等の措置を講じないことに対して、いかなる責任を問わないことを理解し、同意するものとします。
+
+        第10条（譲渡禁止）
+        当社は、ユーザーがユーザーたる地位、ユーザーたる地位に基づきアプリを利用する権利及びユーザーの権利又は義務を第三者に譲渡、販売、貸与、承継、使用許諾、担保としての提供その他一切の処分をすることを禁止します。
+
+        第11条（規約の有効性）
+        利用規約のいずれかの条項又はその一部が、消費者契約法その他の法令等により、無効又は執行不能と判断された場合であっても、利用規約の残りの規定は、完全に有効なものとして、引き続き効力を有するものとします。
+
+        第12条（準拠法）
+        1. 利用規約の成立、効力、解釈及び履行は日本法に準拠して解釈されるものとします。
+        2. 利用規約が日本語と日本語以外の言語にて作成された場合、当該利用規約の言語間での矛盾又は相違が生じた場合は、全ての点において日本語を優先するものとします。
     </string>
     <string name="guideline">ガイドライン</string>
-    <string name="guideline_content">これはガイドラインです。あと数日で考えなければなりませんね。なんとまあ</string>
+    <string name="guideline_content">作成中です。今しばらくお待ちください。</string>
     <string name="privacy_policy">プライバシーポリシー</string>
     <string name="privacy_policy_content">
         本プライバシーポリシー（以下「本ポリシー」）は、本アプリ（以下「当アプリ」）におけるユーザーの個人情報の取り扱いについて定めるものです。
@@ -203,11 +247,7 @@
         5. 利用者の権利
         ユーザーは、当アプリに保存された自身の個人情報について、確認・訂正・削除を求めることができます。対応を希望する場合は、下記の連絡先までお問い合わせください。
 
-        6. お問い合わせ
-        プライバシーポリシーに関するご質問は、以下のメールアドレスまでお問い合わせください。
-        📩 [support@example.com]
-
-        7. 変更について
+        6. 変更について
         本ポリシーは、必要に応じて変更することがあります。重要な変更がある場合は、アプリ内で通知します。
     </string>
 </resources>
