新規登録時

--- a/app/src/main/res/values-jp/strings.xml
+++ b/app/src/main/res/values-jp/strings.xml
@@ -60,6 +60,14 @@
     <string name="to_do_report_debate">討論を通報</string>
     <string name="to_do_report_ventCard">カードを通報</string>
 
+    <!--    使い方関連-->
+    <string name="guide0">どんなアプリ？</string>
+    <string name="guide1">悪口や愚痴を投稿</string>
+    <string name="guide2">他の人の投稿を見る</string>
+    <string name="guide3">反論する</string>
+    <string name="guide4">VSスタート</string>
+    <string name="start">スタート</string>
+
     <!--    マイページ関連-->
     <string name="no_mydebate_available">参加している討論は現在ありません。とても綺麗な心です。討論に参加するとここに表示されますが、無理しないでください。</string>
     <string name="no_mycard_available">作成したベントカードはありません。つらいことは吐き出しても大丈夫です。ただ、あなたとは違う考えの人も必ずいることでしょう。</string>
