ダークモードのデザイン修正。
それにともないステータスバーも明示的に色を指定

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     <string name="guide2">他の人の投稿を見る</string>
     <string name="guide3">反論する</string>
     <string name="guide4">VSスタート</string>
-    <string name="start">スタート</string>
+    <string name="start">はじめる</string>
 
 <!--    マイページ関連-->
     <string name="no_mydebate_available">参加している討論は現在ありません。とても綺麗な心です。<br />討論に参加するとここに表示されますが、無理しないでください。</string>
